# OpenGL-VXGI-Engine

./: .gitignore  CMakeLists.txt  README.md
glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  glad.sln  glad.vcxproj  glad.vcxproj.filters
glad/include/glad/: glad.h
glad_old/: cmake_install.cmake
glad_old/include/glad/: glad.h
glad_old/src/: glad.c
include/: Application.h  ApplicationUI.h  ApplicationUtility.h  Camera.h  CameraUI.h  DirectionalLight.h  Light.h  LightUI.h  MathConstants.h  Mesh.h  Model.h  MyTexture.h  PointLight.h  Renderer.h  RendererUI.h  Vertex.h  setup.h  shader.h  tinyfiledialogs.h
json/: CameraSetting.json  RendererInitSetting.json
lib/: assimp-vc140-mt.exp
model/: opengl_render_testing.mtl
model/sponza/: sponza.mtl
shader/: Blur.frag  Combine.frag  ConeTracing.frag  CubeHardShadowRender.frag  CubePCSS.frag  CubePCSS_Poisson.frag  CubeShadowRender.frag  CubeShadowRender.vert  GBuffer.frag  MSAADetect.frag  MSCombine.frag  MSConeTracing.frag  MSCubePCSS.frag  MSgCubePCSS.frag  MipMap.comp  SSAO.frag  ShadowDepth.vert  ShadowRender.frag  ShadowRender.vert  SoftShadowRender.frag  cubeDepth.frag  cubeDepth.geom  cubeDepth.vert  debug.frag  debug.vert  directionalDepth.vert  downSample.frag  empty.frag  gBuffer.vert  gCubePCSS.frag  hdr.frag  hdriConvert.frag  hdriConvert.vert  lightInjection.comp  lightInjection.frag  lightInjection.geom  lightInjection.vert  newCubePCSS.frag  normal.frag  old_CubePCSS.frag  (+9 more)
src/: Application.cpp  ApplicationUI.cpp  ApplicationUtility.cpp  Camera.cpp  CameraUI.cpp  DirectionalLight.cpp  Light.cpp  LightUI.cpp  Main.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Renderer.cpp  RendererUI.cpp  Shader.h  setup.cpp
